fix double scroll bar when updating by @zhuzhuyule

--- a/css/cover.css
+++ b/css/cover.css
@@ -31,6 +31,7 @@ body {
 }
 body {
   color: #fff;
+  overflow: hidden !important;
 /*  text-align: center;*/
   /*text-shadow: 0 1px 3px rgba(0,0,0,.5);*/
 }
